<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/Re_Username"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
...
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/pass"
        android:id="@+id/Register_password"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/Register_Email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/cpass"
        android:id="@+id/Register_password_confirm"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/Register_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
...
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/sup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Re_button"
        android:textColor="@android:color/white"
        android:background="?android:attr/statusBarColor"
        android:textSize="18sp"
        android:layout_above="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />
...
